# ci-server-poc

./: .cargo-watch.toml  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.dev  Makefile  README.md  config.yaml.example  docker-compose.yml
crates/ci_runner/: Cargo.toml
crates/ci_runner/src/: api.rs  app.rs  cloner.rs  config.rs  error.rs  event_publisher.rs  executor.rs  lib.rs  log_streamer.rs  main.rs  parser.rs  queue.rs  scheduler.rs  types.rs  workspace.rs
crates/ci_runner/src/config/: config.rs  mod.rs
crates/ci_runner/src/core/: app.rs  mod.rs
crates/ci_runner/src/libs/: mod.rs  openapi.rs  scalar.rs  sse.rs
crates/ci_runner/src/middleware/: auth.rs  mod.rs
crates/ci_runner/src/models/: error.rs  mod.rs  types.rs
crates/ci_runner/src/routes/: api.rs
crates/ci_runner/src/services/: artifact_collector.rs  artifact_compressor.rs  cloner.rs  deploy_key.rs  event_publisher.rs  executor.rs  log_streamer.rs  mod.rs  parser.rs  scheduler.rs
crates/ci_runner/src/stores/: adapter.rs  artifact_trait.rs  artifacts.rs  memory.rs  mod.rs  redis.rs  s3_artifacts.rs
crates/ci_runner/src/utils/: metrics.rs  mod.rs  step_evaluator.rs  workspace.rs
examples/: README.md  flutter-apk.yaml  go-binary.yaml  java-docker.yaml  npm-publish.yaml
