[package]
name = "ci_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
actix-web = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
reqwest = { version = "0.12.28", features = ["json", "stream"] }
bollard = "0.19.4"
lapin = "3.7.2"
prometheus = "0.14.0"
secrecy = "0.8"
regex = "1.10"
glob = "0.3"
bytes = "1.5"
futures = "0.3"
async-stream = "0.3"
config = "0.15.19"
futures-util = "0.3"
async-trait = "0.1"
tokio-executor-trait = "3.1.0"
tokio-reactor-trait = "4.1.1"
