[package]
name = "ci_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
actix-web = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
reqwest = { version = "0.12.28", features = ["json", "stream"] }
bollard = "0.19.4"
prometheus = "0.14.0"
secrecy = "0.10.3"
regex = "1.10"
glob = "0.3"
bytes = "1.5"
futures = "0.3"
async-stream = "0.3"
config = "0.15.19"
futures-util = "0.3"
async-trait = "0.1"
lru = "0.16.2"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.17"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.0"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
parking_lot = "0.12"
dashmap = "6.1.0"
